--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" href="libs/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/helps.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -15,7 +19,75 @@
 
 	<div class="header">
 
-		<div class="wrapper">
+		<div class="header_wrap absolute">
+
+			<div class="logo">
+				<a href="#"><img src="img/brand_big.png" alt="alt" /></a>
+			</div>
+
+			<div class="nav_panel absolute">
+				<ul class="small_nav">
+					<li><a href="#">Calendar</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contacts</a></li>
+					<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+				</ul>
+
+				<ul class="big_nav">
+					<li><a href="#">About</a></li>
+					<li class="active"><a href="#">Media</a></li>
+					<li><a href="#">Events</a></li>
+					<li><a href="#">Shop</a></li>
+					<li><a href="#">Give</a></li>
+				</ul>
+			</div>
+
+            <div class="menu_bonus absolute">
+                <img src="img/menu_after.png" alt="alt" />
+            </div>
+
+		</div>
+
+		<div class="container">
+
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+
+					<div class="item active">
+
+                        <img src="img/slider_inner.jpg" alt="Chania">
+						<div class="slide_text absolute">
+							<span class="slide_text_span">Welcome to SevenOaks website</span>
+							<span >which is run by the friends of SevenOaks</span>
+						</div>
+
+					</div>
+
+					<div class="item">
+
+						<img src="img/slider_inner.jpg" alt="Chania">
+						<div class="slide_text absolute">
+							<span class="slide_text_span">Welcome to SevenOaks website</span>
+							<span>which is run by the friends of SevenOaks</span>
+						</div>
+
+					</div>
+
+				</div>
+
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+
+			</div>
 
 		</div>
 
@@ -40,8 +112,6 @@
 		<div class="wrapper">
 
 			<div class="footer_wrap">
-
-				<div class="footer_content">
 
 					<div class="email_signup">
 						<span class="footer_title">SIGNUP TO OUR NEWSLETTER</span>
@@ -76,8 +146,6 @@
 						&#0169; Copyright 2013 SevenOaks.All rights reserved. Privacy Policy <a href="#">Share This</a>
 						</span>
 					</div>
-
-				</div>
 
 			</div>
 
