--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
 		</div>
 
+
+<!--Slider -->
+
 		<div class="container">
 
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -91,13 +94,113 @@
 
 		</div>
 
+<!--END Slider -->
+
 	</div>
 
 <!--END HEADER-->
 
 	<div class="content">
 
-		<div class="wrapper">
+		<div class="content_wrap">
+
+			<div class="cont_item_up relative">
+				<span class="cont_item_text text_1">STORIES</span>
+				<div class="cont_item_panel panel_1 absolute">
+                    <span class="cont_item_text_sm">Read stories of Seven Oaks</span>
+                    <a href="#"><i class="cont_item_button"></i></a>
+				</div>
+			</div>
+
+			<div class="cont_item_up relative">
+				<span class="cont_item_text">GIVE ONLINE</span>
+				<div class="cont_item_panel panel_2 absolute">
+                    <span class="cont_item_text_sm">Quick & easy online giving</span>
+                    <a href="#"><i class="cont_item_button"></i></a>
+				</div>
+			</div>
+
+			<div class="cont_item_up relative">
+				<span class="cont_item_text text_3">PRAYER</span>
+				<div class="cont_item_panel panel_3 absolute">
+                    <span class="cont_item_text_sm">Submit your prayer request</span>
+                    <a href="#"><i class="cont_item_button"></i></a>
+				</div>
+			</div>
+
+            <div class="content_wrap">
+
+                    <div class="cont_item_bt">
+
+                        <span class="cont_bt_title">UPCOMING EVENTS</span>
+
+                        <ul class="events_cal">
+
+                            <li class="relative">
+
+                                <div>
+                                    <span class="mounth_day">20</span>
+                                    <span class="mounth">JULY</span>
+                                </div>
+                                <div>
+                                    <span class="event">FAMILY SUNDAY</span><br>
+                                    <span class="week_day">Sunday l</span>
+                                    <span class="time">9:30am</span>
+                                </div>
+                                <button class="more">MORE</button>
+
+                            </li>
+
+                            <li class="relative">
+
+                                <div>
+                                    <span class="mounth_day">20</span>
+                                    <span class="mounth">JULY</span>
+                                </div>
+                                <div>
+                                    <span class="event">FAMILY SUNDAY</span><br>
+                                    <span class="week_day">Sunday l</span>
+                                    <span class="time">9:30am</span>
+                                </div>
+                                <button class="more">MORE</button>
+
+                            </li>
+
+                            <li class="relative">
+
+                                <div>
+                                    <span class="mounth_day">20</span>
+                                    <span class="mounth">JULY</span>
+                                </div>
+                                <div>
+                                    <span class="event">FAMILY SUNDAY</span><br>
+                                    <span class="week_day">Sunday l</span>
+                                    <span class="time">9:30am</span>
+                                </div>
+                                <button class="more">MORE</button>
+
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                    <div class="cont_item_bt">
+
+                        <span class="cont_bt_title">Sevenoaks</span>
+                        <div class="cont_bt_right  bt_right_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book.</div><br>
+                        <div  class="cont_bt_right bt_right_2">It has survived not only five centuries, but also the leap into electronic
+                            typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                            with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                            recently with desktop publishing software like Aldus PageMaker including versions
+                            of Lorem Ipsum.</div>
+                        <a class="readmore" href="#">READ MORE>></a>
+
+                    </div>
+            </div>
 
 		</div>
 
@@ -108,8 +211,6 @@
 <!--FOOTER-->
 
 	<div class="footer">
-
-		<div class="wrapper">
 
 			<div class="footer_wrap">
 
@@ -125,7 +226,6 @@
 							<span class="footer_title">Sundays at 9:30 & 11:30 AM</span><br>
 							<span class="footer_sign_text">Lorem	insum dolor sit amet</span>
 						</div>
-
 
 					</div>
 
@@ -148,8 +248,6 @@
 					</div>
 
 			</div>
-
-		</div>
 
 	</div>
 <!--END FOOTER-->	
