--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		<div class="header_wrap absolute">
 
 			<div class="logo">
-				<a href="#"><img src="img/brand_big.png" alt="alt" /></a>
+				<a href="#"><img class="big_logo" src="img/brand_big.png" alt="alt" /></a>
+				<a href="#"><img class="small_logo" src="img/small_logo.png" alt="alt" /></a>
 			</div>
 
 			<div class="nav_panel absolute">
@@ -46,6 +47,11 @@
                 <img src="img/menu_after.png" alt="alt" />
             </div>
 
+			<div class="hidden_menu" id="jq_menu_hidden">
+				<div class="first"></div>
+				<div class="second"></div>
+				<div class="third"></div>
+			</div>
 		</div>
 
 
@@ -113,7 +119,7 @@
 			</div>
 
 			<div class="cont_item_up relative">
-				<span class="cont_item_text">GIVE ONLINE</span>
+				<span class="cont_item_text text_2">GIVE ONLINE</span>
 				<div class="cont_item_panel panel_2 absolute">
                     <span class="cont_item_text_sm">Quick & easy online giving</span>
                     <a href="#"><i class="cont_item_button"></i></a>
