--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					</div>
 
 					<div class="service_times">
-						<span class="footer_title">SERVICE TIMES</span><br>
+						<span class="footer_title st_title">SERVICE TIMES</span><br>
 
 						<div class="service_times_items">
 							<span class="footer_title">Sundays at 9:30 & 11:30 AM</span><br>
