--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<script src="libs/jquery-1.12.4.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="libs/reset.css">
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/helps.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -66,7 +66,7 @@
 
 					<div class="item active">
 
-                        <img src="img/slider_inner.jpg" alt="Chania">
+                        <div class="slider_img"></div>
 						<div class="slide_text absolute">
 							<span class="slide_text_span">Welcome to SevenOaks website</span>
 							<span >which is run by the friends of SevenOaks</span>
@@ -76,7 +76,7 @@
 
 					<div class="item">
 
-						<img src="img/slider_inner.jpg" alt="Chania">
+						<div class="slider_img"></div>
 						<div class="slide_text absolute">
 							<span class="slide_text_span">Welcome to SevenOaks website</span>
 							<span>which is run by the friends of SevenOaks</span>
